--- a/tic.html
+++ b/tic.html
@@ -17,6 +17,21 @@
 		<![endif]-->
 	</head>
 	<body>
+		<div class="container">
+		  <h2>Alerts</h2>
+		  <div class="alert alert-success">
+		    <strong>Success!</strong> This alert box could indicate a successful or positive action.
+		  </div>
+		  <div class="alert alert-info">
+		    <strong>Info!</strong> This alert box could indicate a neutral informative change or action.
+		  </div>
+		  <div class="alert alert-warning">
+		    <strong>Warning!</strong> This alert box could indicate a warning that might need attention.
+		  </div>
+		  <div class="alert alert-danger">
+		    <strong>Danger!</strong> This alert box could indicate a dangerous or potentially negative action.
+		  </div>
+		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<h1 class="text-center">Hello World</h1>
 		<canvas id="myCanvas" width="750" height="750" style="border:2px solid #000000"></canvas>
