--- a/tic.html
+++ b/tic.html
@@ -4,34 +4,18 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Title Page</title>
+		<title>T T T/title>
 		<link href="toe.css" rel="stylesheet" type="text/css">
 		<!-- Bootstrap CSS -->
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
-		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-		<![endif]-->
+		
 	</head>
 	<body>
-		<div class="container">
-		  <h2>Alerts</h2>
-		  <div class="alert alert-success">
-		    <strong>Success!</strong> This alert box could indicate a successful or positive action.
-		  </div>
-		  <div class="alert alert-info">
-		    <strong>Info!</strong> This alert box could indicate a neutral informative change or action.
-		  </div>
-		  <div class="alert alert-warning">
-		    <strong>Warning!</strong> This alert box could indicate a warning that might need attention.
-		  </div>
-		  <div class="alert alert-danger">
-		    <strong>Danger!</strong> This alert box could indicate a dangerous or potentially negative action.
-		  </div>
-		</div>
+		<h1 id="Title">TIC TAC TOE</h1>
+		<div class="message" id="win">
+	    	<h3></h3>
+	  	</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<h1 class="text-center">Hello World</h1>
 		<canvas id="myCanvas" width="750" height="750" style="border:2px solid #000000"></canvas>
