fixed title tag so that document now loads

--- a/tic.html
+++ b/tic.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>T T T/title>
+		<title>T T T</title>
 		<link href="toe.css" rel="stylesheet" type="text/css">
 		<!-- Bootstrap CSS -->
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 		
 	</head>
 	<body>
-		<h1 id="Title">TIC TAC TOE</h1>
+		<h1 id="title-head">TIC TAC TOE</h1>
 		<div class="message" id="win">
 	    	<h3></h3>
 	  	</div>
