--- a/tic.html
+++ b/tic.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>T T T</title>
-		<link href="toe.css" rel="stylesheet" type="text/css">
+		<link href="toe.scss" rel="stylesheet" type="text/css">
 		<!-- Bootstrap CSS -->
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
@@ -17,12 +17,15 @@
 	    	<h3></h3>
 	  	</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<h1 class="text-center">Hello World</h1>
+
+		<div id="canvas-container">
 		<canvas id="myCanvas" width="750" height="750" style="border:2px solid #000000"></canvas>
+		</div>
+		
 		<!-- jQuery -->
-		<script src="//code.jquery.com/jquery.js"></script>
+		<!-- <script src="//code.jquery.com/jquery.js"></script> -->
 		<!-- Bootstrap JavaScript -->
-		<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		//<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script src="tac.js"></script>
 	</body>
 </html>
