SCSS properly implemented, fixed win logic

--- a/tic.html
+++ b/tic.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>T T T</title>
-		<link href="toe.scss" rel="stylesheet" type="text/css">
+		<link href="styles/compiled.css" rel="stylesheet" type="text/css">
 		<!-- Bootstrap CSS -->
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
@@ -26,6 +26,6 @@
 		<!-- <script src="//code.jquery.com/jquery.js"></script> -->
 		<!-- Bootstrap JavaScript -->
 		//<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-		<script src="tac.js"></script>
+		<script src="scripts/tac.js"></script>
 	</body>
 </html>
