add star wars styling to title

--- a/tic.html
+++ b/tic.html
@@ -6,13 +6,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>T T T</title>
 		<link href="styles/compiled.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" type="text/css" href="STARWARS/stylesheet.css">
 		<!-- Bootstrap CSS -->
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
 		
 	</head>
 	<body>
-		<h1 id="title-head">TIC TAC TOE</h1>
+		<h1 id="title">TIC TAC TOE</h1>
+		<h2 id="title-under">STAR WARS EDITION</h2>
 		<div class="message" id="win">
 	    	<h3></h3>
 	  	</div>
