--- a/tic.html
+++ b/tic.html
@@ -13,15 +13,21 @@
 		
 	</head>
 	<body>
-		<h1 id="title">TIC TAC TOE</h1>
-		<h2 id="title-under">STAR WARS EDITION</h2>
-		<div class="message" id="win">
+		<div id="title-box">
+			<div id="title-container">
+				<h1 id="title">TIC TAC TOE</h1>
+				<h2 id="title-under">STAR WARS EDITION</h2>
+			</div>
+		</div>
+		
+		
+		<!-- <div class="message" id="win">
 	    	<h3></h3>
-	  	</div>
+	  	</div> -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 		<div id="canvas-container">
-		<canvas id="myCanvas" width="750" height="750" style="border:2px solid #000000"></canvas>
+		<canvas id="myCanvas" width="750" height="750" style="border:5px solid #FFFFFF"></canvas>
 		</div>
 		
 		<!-- jQuery -->
