bower module stufff

--- a/tic.html
+++ b/tic.html
@@ -10,6 +10,11 @@
 		<!-- Bootstrap CSS -->
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- sweet alert stuff -->
+    <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script> 
+    <link rel="stylesheet" type="text/css" href="dist/sweetalert.css">
+
+
 		
 	</head>
 	<body>
