test alert works

--- a/tic.html
+++ b/tic.html
@@ -10,9 +10,9 @@
 		<!-- Bootstrap CSS -->
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- sweet alert stuff -->
-    <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script> 
-    <link rel="stylesheet" type="text/css" href="dist/sweetalert.css">
+    <!-- alertify -->
+    <script src="https://cdn.rawgit.com/alertifyjs/alertify.js/v1.0.5/dist/js/alertify.js"></script>
+
 
 
 		
